# basic-ml

./: README.md  pyproject.toml
1_perceptron/: perceptron_learning.ipynb
