[tool.poetry]
name = "basic-ml"
version = "1.0.0"
description = "Collection of basic ML algorithms"
authors = ["erikdao <cuong@neuraltalks.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.5"
numpy = "^1.19.5"
scipy = "^1.6.0"
pandas = "^1.2.1"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
